// Generated by packtool 
// time: 09/02/15 16:58:34
package ProConfigSpace;

import "ConfigTypeGroup.proto";
message ItemBaseConfig {
	enum ITEM_TYPE{
	 ITEM_TYPE_4 = 4; // 
	 ITEM_TYPE_1 = 1; // 
	 ITEM_TYPE_2 = 2; // 
	 ITEM_TYPE_3 = 3; // 
	};
	repeated ConfigTypeGroup show = 5; //吴凡:cell 测试 
	repeated int32 sell = 4; //吴凡:base 测试 
	optional int32 itemid = 1; //吴凡:id 
	optional string name = 2; //吴凡:名字 
}
