// Generated by packtool 
// time: 09/02/15 17:13:59
package ProConfigSpace;

import "ConfigTypeGroup.proto";
message ItemSellConfig {
	optional int32 sell_id = 1; //吴凡:id 
}
