// Generated by packtool 
// time: 09/02/15 16:58:34
package ProConfigSpace;

import "ConfigTypeGroup.proto";
message MonsterConfig {
	enum MONSTERTYPE{
	 MONSTER_TYPE_7 = 7; //吴凡:怪物类型7 
	 MONSTER_TYPE_2 = 2; //吴凡:怪物类型2 
	 MONSTER_TYPE_11 = 11; //吴凡:怪物类型11 
	 MONSTER_TYPE_13 = 13; //吴凡:怪物类型13 
	 MONSTER_TYPE_5 = 5; //吴凡:怪物类型5 
	 MONSTER_TYPE_12 = 12; //吴凡:怪物类型12 
	 MONSTER_TYPE_10 = 10; //吴凡:怪物类型10 
	 MONSTER_TYPE_6 = 6; //吴凡:怪物类型6 
	 MONSTER_TYPE_9 = 9; //吴凡:怪物类型9 
	 MONSTER_TYPE_8 = 8; //吴凡:怪物类型8 
	 MONSTER_TYPE_1 = 1; //吴凡:怪物类型1 
	 MONSTER_TYPE_4 = 4; //吴凡:怪物类型4 
	 MONSTER_TYPE_3 = 3; //吴凡:怪物类型3 
	};
	optional MONSTERTYPE type = 3; //作者:怪物类型。测试自定义枚举 
	optional int32 monsterid = 1; //吴凡:怪物ID 
	repeated int32 position = 4; //作者:怪物位置。测试数组 
	optional string name = 2; //作者:怪物名字 
	repeated ConfigTypeGroup groupposition = 5; //作者:随便定义的测试用，测试多维数组 
}
