// Generated by packtool 
// time: 09/02/15 17:13:59
package ProConfigSpace;

import "ConfigTypeGroup.proto";
message Monster_OtherConfig {
	enum ENUMTEST{
	 ENUMTESTB = 2; //吴凡:testb 
	 ENUMTESTC = 4; //吴凡:testc 
	 ENUMTESTA = 1; //吴凡:testa 
	};
	optional string showformat = 4; //作者:显示的序列化字符串 
	optional string name = 2; //作者:名字 
	optional int32 imageid = 3; //作者:数值 
	optional int32 id = 1; //作者:ID 
	optional string showformat1 = 5; //作者:显示的序列化字符串 
	optional int32 rate = 6; //作者:概率 
	optional string desc = 7; //作者:描述 
}
